# FFdynamic

./: .gitmodules  .travis.yml  LICENSE  README.md
FFdynamic/: CMakeLists.txt  README.md  build.sh
FFdynamic/cmake/: BuildVersion.cmake  FFdynamicConfig.cmake.in  FindFFmpeg.cmake  FindGlog.cmake
FFdynamic/davBasis/: davDict.cpp  davDict.h  davMessager.cpp  davMessager.h  davOption.h  davProc.cpp  davProc.h  davProcBuf.cpp  davProcBuf.h  davProcCtx.h  davTransmitor.h  davUtil.cpp  davUtil.h  davWave.cpp  davWave.h
FFdynamic/davEvent/: davDynamicEvent.h  davPeerEvent.h
FFdynamic/davImpl/: davImpl.cpp  davImpl.h  davImplEventProcess.h  davImplFactory.h  davImplTravel.cpp  davImplTravel.h  davImplUtil.h  ffmpegHeaders.h
FFdynamic/davImpl/audioDecode/: ffmpegAudioDecode.cpp  ffmpegAudioDecode.h
FFdynamic/davImpl/audioEncode/: ffmpegAudioEncode.cpp  ffmpegAudioEncode.h
FFdynamic/davImpl/audioMix/: audioMix.cpp  audioMix.h  audioSyncer.cpp  audioSyncer.h
FFdynamic/davImpl/dataRelay/: dataRelay.cpp  dataRelay.h
FFdynamic/davImpl/demux/: ffmpegDemux.cpp  ffmpegDemux.h
FFdynamic/davImpl/filter/: ffmpegFilter.cpp  ffmpegFilter.h  filterGeneral.cpp  filterGeneral.h  filterGraph.cpp  filterGraph.h  scaleFilter.cpp  scaleFilter.h
FFdynamic/davImpl/mux/: ffmpegMux.cpp  ffmpegMux.h
FFdynamic/davImpl/videoDecode/: ffmpegVideoDecode.cpp  ffmpegVideoDecode.h
FFdynamic/davImpl/videoEncode/: ffmpegVideoEncode.cpp  ffmpegVideoEncode.h  x264Encode.h
FFdynamic/davImpl/videoMix/: videoMix.cpp  videoMix.h
FFdynamic/davImpl/videoMix/cellMixer/: cellLayout.cpp  cellLayout.h  cellMixer.cpp  cellMixer.h  cellScaleSyncer.cpp  cellScaleSyncer.h  cellSetting.cpp  cellSetting.h
FFdynamic/davStreamlet/: davStreamlet.cpp  davStreamlet.h  davStreamletBuilder.cpp  davStreamletBuilder.h
FFdynamic/davTests/: CMakeLists.txt  avMixTest.cpp  ffmpegFilterTest.cpp  simpleTranscode.cpp  streamletMixTest.cpp  testCommon.cpp  testCommon.h
FFdynamic/davTests/miscTest/: cli.demo  example_luabridge.cpp  group.c  load.sh  option_wrap.c  options.c  options.lua  sharedptr_test.cpp
FFdynamic/davTests/miscTest/old/: ffBasedUtils.cpp  ffBasedUtils.h  miscUtils.cpp  miscUtils.h  stringParse.cpp  stringParse.h  timeClock.cpp  timeClock.h
FFdynamic/davTests/miscTest/old/testUtils/: Makefile  testStringParse.cpp
FFdynamic/davTools/: CMakeLists.txt
FFdynamic/davTools/audioResample/: Makefile  a.out  audioResample.cpp  audioResample.h  test.cpp
FFdynamic/davTools/audioResample/a.out.dSYM/Contents/Resources/DWARF/: a.out
FFdynamic/davTools/globalSignalHandle/: globalSignalHandle.cpp  globalSignalHandle.h
FFdynamic/davTools/imageToRawFrame/: Makefile  fmtScale.h  imageToRawFrame.h  test.cpp
FFdynamic/davTools/misc/: davReloader.h  makeContainer.h
apps/appCommon/: appService.cpp  appService.h  appUtil.h  pbToDavOptionEvent.h
apps/appCommon/protos/: CMakeLists.txt  appGlobalSetting.proto  davStreamletSetting.proto  davWaveSetting.proto
apps/appCommon/protos/dynaDetect/: dynaDetect.proto
apps/appCommon/protos/dynaDnnDetect/: dynaDnnDetect.proto
apps/appCommon/protos/ial/: ialConfig.proto  ialRequest.proto
apps/dynaDnnDetect/: CMakeLists.txt  README.md  detectorMain.cpp  dynaDetectorMain.cpp  dynaDetectorService.cpp  dynaDetectorService.h  dynaDnnDetect.conf  pbToDynaDetectOption.h
apps/dynaObjDetector/: CMakeLists.txt  README.md  dynaDetectorService.h
apps/interactiveLive/: CMakeLists.txt  README.md  build.sh  ialConfig.json  ialHttpService.cpp  ialHttpService.h  ialMain.cpp  ialService.cpp  ialService.h  ialUtil.h
apps/interactiveLive/testScripts/: testIal.py
asset/: transcode.md
examplePlugin/: CMakeLists.txt  README.md  dehazor.h  ffdynaDehazor.cpp  ffdynaDehazor.h  testCommon.h  testDehazor.cpp
modules/: CMakeLists.txt  README.md  build_with_darknet.sh
modules/cuvidReader/: cuvidReader.cpp  cuvidReader.h
modules/cuvidReader/nvcodec/: CMakeLists.txt
modules/cuvidReader/nvcodec/NvCodec/NvDecoder/: NvDecoder.h
modules/cuvidReader/nvcodec/NvCodec/NvEncoder/: NvEncoder.cpp
modules/cuvidReader/nvcodec/Utils/: BitDepth.cu  ColorSpace.cu  Resize.cu
modules/cvDnnDetect/: cvDnnDetect.cpp  cvDnnDetect.h
modules/cvObjDetect/: cvObjDetect.cpp  cvObjDetect.h
modules/cvPostDraw/: cvPostDraw.cpp  cvPostDraw.h
modules/focusFaceEncode/: faceDetect.cpp  faceDetect.h
modules/moduleCLI/: cliCommon.cpp  cliCommon.h  testCvDnnDetect.cpp
modules/moduleCommon/: frameMat.h
modules/moduleEvent/: cvPeerDynaEvent.h  objDetectPeerDynaEvent.h
modules/moduleStreamlet/: cvStreamlet.cpp  cvStreamlet.h  objDetectStreamlet.cpp  objDetectStreamlet.h
modules/moduleTest/: dnnModelDownload.sh  testCommon.cpp  testCommon.h  testCvDnnDetect.cpp  testObjDnnDetect.cpp  vgg_ssd_300_deploy.prototxt
modules/nvcodec/: CMakeLists.txt
modules/nvcodec/NvCodec/NvDecoder/: NvDecoder.cpp
modules/nvcodec/Utils/: FFmpegDemuxer.h  FFmpegStreamer.h  NvCodecUtils.h  NvEncoderCLIOptions.h
modules/objDetect/: objDetect.h
modules/objDetect/cvDnnDetect/: cvDnnDetect.cpp  cvDnnDetect.h
modules/objDetect/darknetDetect/: darknetDetect.cpp  darknetDetect.h
modules/yoloROI/: yoloROI.h
pluginExample/: CMakeLists.txt  README.md  dehazor.cpp  ffdynaDehazor.cpp  ffdynaDehazor.h  testDehazor.cpp
tools/bridge/: bridge.conf  bridge.lua  config_bridge.lua  daemon.lua  task_infos.lua  utils.lua
tools/bridge/bridge.d/: dyn_transcode.conf  interactive_live.conf  internal_task.conf  unittest.conf
tools/bridge/unittest/: ffdynamic_unittest.lua  unittest.sh
tools/bridge/unittest/test_case/: create_room.json
tools/dockerlize/: README.md
tools/dockerlize/ial_docker/: FedoraRepo.repo  build_ial.sh  ial_dockerfile  run_ial.sh
tools/httpUtil/: CMakeLists.txt  README.md  build.sh  httpClient.h  httpCommon.h  httpServer.h  testHttpUtil.cpp
tools/pbtree/: CMakeLists.txt  README.md  pbtree.h  test.proto  test2.proto  testPbtree.cpp
